# encointer-node-pre2.0.0

./: Cargo.toml  README.md
client/: Cargo.toml  README.md  bootstrap_demo_currency.sh  demo_poc1.sh
client/src/: cli.yml  main.rs
doc/: BOOTSTRAPPING.md  TESTNET_SPECIFICATION.md
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
