[package]
name = "encointer-client"
version = "0.1.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies]
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git"}
log = "0.4"
env_logger = "0.7"
hex = "0.4"
json = "0.12.0"
substrate-bip39 = "0.3.1"
tiny-bip39 = "0.6.2"
serde_json      = { version = "1.0"}
clap            = { version = "2.33", features = [ "yaml" ] }
primitive-types = { version = "0.6.1", default-features = false, features = ["codec"] }
geojson = "0.17"
base58  = "0.1"

[dependencies.encointer-ceremonies]
default-features = false
git = "https://github.com/encointer/pallet-encointer-ceremonies"
package = "pallet-encointer-ceremonies"

[dependencies.encointer-currencies]
default-features = false
git = "https://github.com/encointer/pallet-encointer-currencies"
package = "pallet-encointer-currencies"

[dependencies.encointer-scheduler]
default-features = false
git = "https://github.com/encointer/pallet-encointer-scheduler"
package = "pallet-encointer-scheduler"

[dependencies.encointer-balances]
default-features = false
git = "https://github.com/encointer/pallet-encointer-balances"
package = "pallet-encointer-balances"

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate'
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "substrate-primitives"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"
package = "sr-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.keystore]
git = 'https://github.com/paritytech/substrate'
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "substrate-keystore"

[dependencies.balances]
git = 'https://github.com/paritytech/substrate'
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "pallet-balances"
default-features=false

[dependencies.system]
git = 'https://github.com/paritytech/substrate'
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "palette-system"
default-features=false

[dependencies.encointer-node-runtime]
path = '../runtime'

[dependencies.keyring]
git = 'https://github.com/paritytech/substrate'
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "substrate-keyring"

[dependencies.app-crypto]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
package = "substrate-application-crypto"

#[patch.crates-io]
#ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}